<resources>
    <string name="app_name">TEDxPortSaid</string>
    <string name="About_us">About us</string>
    <string name="Partners">Partners</string>
    <string name="Follow_us">Follow Us</string>
    <string name="Developer">Developer</string>
    <string name="follow_us_tedx">Follow us on social media</string>
    <string name="developer">App developed by Mahmoud Elfeel</string>
    <string name="Schedule">Schedule</string>
    <string name="how_to_get_there">Directions</string>
    <string name="ask_hint">Ask the upcoming speakers for a chance to answer your question in a back-stage video !</string>
    <string name="form_que_gint">Please Keep Question In Speaker\'s Specialty</string>
    <string name="form_edit_text_hint">Write question here…</string>
    <string name="ask">Ask</string>
    <string name="smallFont">Cairo-Light.ttf</string>
    <string name="bigFont">Cairo-Bold.ttf</string>
    <string name="whatsAppDoesntExist">WhatsApp isn\'t installed you can install it from google play</string>
    <string name="error_happend">Error happened !</string>
    <string name="no_email_app">No app can send emails on your device !</string>
    <string name="videos_not_loaded">Error get Youtube video please check internet connection</string>
    <string name="read">Read</string>
    <string name="watch">Watch</string>
    <string name="no_videos_randomize">No videos to choose from please check internet connection</string>
    <string name="no_articles_randomize">no articles to choose from please check internet connection</string>
    <string name="articles">Articles</string>
    <string name="videos">Videos</string>
    <string name="speakers">Speakers</string>
    <string name="schedule">Schedule</string>
    <string name="about_us">About us</string>
    <string name="technology">Technology</string>
    <string name="Education">Education</string>
    <string name="Design">Design</string>
    <string name="Ideas" >Ideas</string>
    <string name="Cultures">Cultures</string>
    <string name="Entertainment">Entertainment</string>
    <string name="tedx_vid">TED</string>
    <string name="no_data">No Internet Connection</string>
    <string name="no_speakers_randomize">Please check internet connection</string>
    <string name="extenstion">%sd %sh %sm %ss</string>
    <string name="day_ext">d</string>
    <string name="hour_ext">h</string>
    <string name="minute_ext">m</string>
    <string name="second_ext">s</string>
    <string name="tedx_event">TEDxPortSaid Event</string>
    <string name="wite_quesition">Please Write a Question first !</string>
    <string name="no_intenret_form">No Internet connection please check and try again</string>
    <string name="qusetion_sent">Your question has been sent to TEDxPortSaid Team !</string>
    <string name="finish">Finish</string>
    <string name="schedule_desc">Know all about the event exact timeline</string>
    <string name="schedule_speakers">Explore the event\'s speakers and ask them for a chance to get your question answered !</string>
    <string name="schedule_videos">Watch TED and TEDxPortSaid videos once they get updated !</string>
    <string name="getThereDesc">TEDxPortSaid Event will take place at The Culture Entertainment Center in Port Said on the 3rd of August, 2018</string>
    <string name="full_question">Please write a full question</string>
</resources>
