<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/article"
        android:title="@string/articles"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_schedules"
        android:enabled="true"
        android:icon="@drawable/article"
        android:title="@string/videos"
        app:showAsAction="ifRoom" />
    <item
        android:enabled="true"
        android:icon="@drawable/article"
        android:title="@string/speakers"
        app:showAsAction="ifRoom" />

    <item
        android:enabled="true"
        android:icon="@drawable/article"
        android:title="@string/schedule"
        app:showAsAction="ifRoom" />

    <item
        android:enabled="true"
        android:icon="@drawable/article"
        android:title="@string/about_us"
        app:showAsAction="ifRoom" />
</menu>