<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="@color/frag_background"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_above="@+id/question_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/form_que_gint"

        />

    <EditText
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_height="150dp"
        android:gravity="center|start"
        android:padding="15dp"
        android:layout_centerInParent="true"
        android:hint="@string/form_edit_text_hint"
        android:background="@drawable/gradient_stroke"
        android:textSize="14sp"
        android:inputType="text"/>





    <FrameLayout
        android:id="@+id/toast_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:id="@+id/send_question"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/gradient_btn_main"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/ask"
            android:textColor="@color/white"
            android:stateListAnimator="@null"

            tools:targetApi="lollipop"/>
    </FrameLayout>

</RelativeLayout>